jsonschemadsl2ecore.trafo.opt/test/test91/invalidtests/example3.test91
{
	"baz":"Error",
	"quax":"Warn no good",
	"bazzz":{
		"foo":"Warn"
	},
	"foossss":"Fatal"
}